Melhoria na consulta da dashboard

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jackson.date-format=yyyy-MM-dd
 
 glick.show-sql=true
 
-spring.profiles.active=basic-security
+spring.profiles.active=oauth-security
